; ModuleID = '/home/carl/AnghaBench/libgit2/tests/worktree/extr_worktree.c_test_worktree_worktree__open_invalid_commondir.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/worktree/extr_worktree.c_test_worktree_worktree__open_invalid_commondir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32 }
%struct.TYPE_11__ = type { %struct.TYPE_10__* }
%struct.TYPE_10__ = type { i32 }

@GIT_BUF_INIT = common dso_local global %struct.TYPE_9__ zeroinitializer, align 4
@.str = private unnamed_addr constant [31 x i8] c"/path/to/nonexistent/commondir\00", align 1
@.str.1 = private unnamed_addr constant [41 x i8] c"%s/worktrees/testrepo-worktree/commondir\00", align 1
@fixture = common dso_local global %struct.TYPE_11__ zeroinitializer, align 8
@O_RDWR = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [18 x i8] c"testrepo-worktree\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_worktree_worktree__open_invalid_commondir() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_9__, align 4
  %4 = alloca %struct.TYPE_9__, align 4
  %5 = bitcast %struct.TYPE_9__* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %5, i8* align 4 bitcast (%struct.TYPE_9__* @GIT_BUF_INIT to i8*), i64 4, i1 false)
  %6 = bitcast %struct.TYPE_9__* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %6, i8* align 4 bitcast (%struct.TYPE_9__* @GIT_BUF_INIT to i8*), i64 4, i1 false)
  %7 = call i32 @git_buf_sets(%struct.TYPE_9__* %3, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  %8 = call i32 @cl_git_pass(i32 %7)
  %9 = load %struct.TYPE_10__*, %struct.TYPE_10__** getelementptr inbounds (%struct.TYPE_11__, %struct.TYPE_11__* @fixture, i32 0, i32 0), align 8
  %10 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @git_buf_printf(%struct.TYPE_9__* %4, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.1, i64 0, i64 0), i32 %11)
  %13 = call i32 @cl_git_pass(i32 %12)
  %14 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %4, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @O_RDWR, align 4
  %17 = call i32 @git_futils_writebuffer(%struct.TYPE_9__* %3, i32 %15, i32 %16, i32 420)
  %18 = call i32 @cl_git_pass(i32 %17)
  %19 = load %struct.TYPE_10__*, %struct.TYPE_10__** getelementptr inbounds (%struct.TYPE_11__, %struct.TYPE_11__* @fixture, i32 0, i32 0), align 8
  %20 = call i32 @git_worktree_lookup(i32** %1, %struct.TYPE_10__* %19, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.2, i64 0, i64 0))
  %21 = call i32 @cl_git_pass(i32 %20)
  %22 = load i32*, i32** %1, align 8
  %23 = call i32 @git_repository_open_from_worktree(i32** %2, i32* %22)
  %24 = call i32 @cl_git_fail(i32 %23)
  %25 = call i32 @git_buf_dispose(%struct.TYPE_9__* %3)
  %26 = call i32 @git_buf_dispose(%struct.TYPE_9__* %4)
  %27 = load i32*, i32** %1, align 8
  %28 = call i32 @git_worktree_free(i32* %27)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_buf_sets(%struct.TYPE_9__*, i8*) #2

declare dso_local i32 @git_buf_printf(%struct.TYPE_9__*, i8*, i32) #2

declare dso_local i32 @git_futils_writebuffer(%struct.TYPE_9__*, i32, i32, i32) #2

declare dso_local i32 @git_worktree_lookup(i32**, %struct.TYPE_10__*, i8*) #2

declare dso_local i32 @cl_git_fail(i32) #2

declare dso_local i32 @git_repository_open_from_worktree(i32**, i32*) #2

declare dso_local i32 @git_buf_dispose(%struct.TYPE_9__*) #2

declare dso_local i32 @git_worktree_free(i32*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
